fix kebab menu alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,10 @@
   list-style: none;
   text-decoration: none;
   font-weight: 400;
-  /* outline: thin solid red;*/
+  outline: thin solid red;
 }
 
 :root {
-  --padding-default: 1rem 0;
   font-family: "Poppins", Helvetica, Arial, sans-serif;
   font-size: 18px;
   scroll-behavior: smooth;
@@ -21,6 +20,8 @@ body {
   animation: animateBgGradient 2s infinite alternate;
   background: radial-gradient(ellipse at top, #dbfeff, #dfc4ff);
   background-size: 200% 200%;
+  position: relative;
+  height: 100vh;
 }
 
 h3 {
@@ -28,18 +29,22 @@ h3 {
 }
 
 .header {
+  margin: 0rem auto;
+  max-width: 900px;
+  padding: 0.5rem 0;
+}
+
+.header-info {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 1fr auto;
   grid-template-areas:
     "title button"
     "about button";
-  margin: 0.5rem auto;
   padding: 0.5rem 1rem;
-  max-width: 900px;
 }
 
-.header .title {
+.header-info .title {
   display: flex;
   flex-flow: column wrap;
   grid-area: title;
@@ -47,11 +52,11 @@ h3 {
   line-height: 2.5rem;
 }
 
-.header .title span {
+.header-info .title span {
   font-weight: 500;
 }
 
-.header .about {
+.header-info .about {
   padding: var(--padding-default);
   grid-area: about;
 }
@@ -60,6 +65,8 @@ h3 {
 
 .kebab-menu {
   align-items: center;
+  background: none;
+  cursor: pointer;
   display: flex;
   flex-flow: column wrap;
   gap: 0.3rem;
@@ -68,6 +75,7 @@ h3 {
   margin: 0.4rem 0;
   margin-left: auto;
   width: 44px;
+  z-index: 1;
 }
 
 .kebab-menu span {
@@ -84,14 +92,18 @@ h3 {
 }
 
 .open-menu {
-  grid-area: button;
+  position: absolute;
   background-color: #dbfeff;
   display: flex;
-  gap: 0.3rem;
-  height: 100%;
+  font-size: 2rem;
+  gap: 1rem;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   visibility: hidden;
 }
 
@@ -262,20 +274,22 @@ body .footer .footer-nav .nav-menu {
 /* MEDIA QUERIES */
 
 @media (min-width: 768px) {
+
+  .header {
+    position: relative;
+  }
+
   .header .title {
     font-size: 3rem;
     line-height: 3.8rem;
   }
 
-  .header .profile-image {
-    background: url(../images/img-profile.jpeg) center -135px no-repeat;
-    background-size: 140%;
-  }
-
-  .header .profile-image {
-    width: 300px;
-    height: 300px;
-    transition: ease-in-out 0.2s;
+  .open-menu {
+    font-size: 1rem;
+    top: 0;
+    right: 0;
+    width: 30%;
+    margin: 1rem 70%;
   }
 
   .main #work {
